--- a/config/samples/certchecker_v1alpha1_certificatecheck.yaml
+++ b/config/samples/certchecker_v1alpha1_certificatecheck.yaml
@@ -10,3 +10,8 @@ metadata:
   name: certificatecheck-sample
 spec:
   # TODO(user): Add fields here
+  certificates:
+    - secretName: regcred
+      secretNamespace: default
+    - secretName: secret-2
+      secretNamespace: kube-system
