--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,8 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: localhost:5000/egarciam/cert-checker
-  newTag: "1.0"
+  newName: controller
+  newTag: latest
 
 
 # patches:
